# NEEM_Evaluator

./: .gitignore  CMakeLists.txt  README.md  package.xml  pyproject.toml  requirements.txt  setup.py
NEEM/all/: tf.metadata.json  triples.metadata.json
NEEM/annotations/roslog/: annotations.bson  annotations.metadata.json
doc/: README.md
doc/source/: conf.py  examples.rst  index.rst  installation.rst  metrics.rst
doc/source/notebooks/: Neem_evaluation.ipynb
example_NEEMs/NEEM_1/annotations/roslog/: annotations.bson  annotations.metadata.json
example_NEEMs/NEEM_1/tf/roslog/: tf.bson  tf.metadata.json
example_NEEMs/NEEM_1/triples/roslog/: triples.metadata.json
example_NEEMs/NEEM_2/annotations/roslog/: annotations.bson  annotations.metadata.json
example_NEEMs/NEEM_2/tf/roslog/: tf.bson  tf.metadata.json
example_NEEMs/NEEM_2/triples/roslog/: triples.metadata.json
examples/: Neem_evaluation.ipynb  Neem_visualization.ipynb  README.md  vis_neem.py
resources/: left_hand.stl  right_hand.stl
resources/cached/: apartment.urdf  plane.urdf
src/: bullet_world.py  helper.py  knowrob.py  metrics.py  mongo.py
src/neem_evaluator/: bullet_world.py  events.py  helper.py  knowrob.py  metrics.py  misc.py  mongo.py  neem.py
