[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neem_evaluator"
version = "0.0.1"
authors = [
  { name="Jonas Dech", email="jdech@uni-bremen.de" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Tigul/NEEM_Evaluator"
Issues = "https://github.com/Tigul/NEEM_Evaluator/issues"